-- Doctor summaries, emergency dashboard data, and AI chat history.
-- Run after database/supabase_schema.sql.

BEGIN;

-- Keep users.id as the numeric patient system ID.
-- Keep users.id_number as VARCHAR(13): South African ID numbers can start with 0.

CREATE TABLE IF NOT EXISTS hospitals (
  hospital_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name VARCHAR(150) NOT NULL,
  email VARCHAR(255) NOT NULL UNIQUE,
  phone VARCHAR(30),
  service_area VARCHAR(120) NOT NULL,
  address TEXT,
  active BOOLEAN NOT NULL DEFAULT TRUE,
  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS hospital_auth (
  auth_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  hospital_id INTEGER NOT NULL REFERENCES hospitals(hospital_id) ON DELETE CASCADE,
  password_hash VARCHAR(255) NOT NULL,
  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX IF NOT EXISTS idx_hospital_auth_hospital_id ON hospital_auth(hospital_id);

CREATE TABLE IF NOT EXISTS hospital_alert_assignments (
  assignment_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  alert_id INTEGER NOT NULL REFERENCES emergency_alerts(alert_id) ON DELETE CASCADE,
  hospital_id INTEGER NOT NULL REFERENCES hospitals(hospital_id) ON DELETE CASCADE,
  assigned_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
  status VARCHAR(30) DEFAULT 'ASSIGNED',
  UNIQUE (alert_id, hospital_id)
);

CREATE INDEX IF NOT EXISTS idx_hospital_alert_assignments_hospital_id
  ON hospital_alert_assignments(hospital_id);

CREATE TABLE IF NOT EXISTS ai_chat_messages (
  chat_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id INTEGER REFERENCES users(id) ON DELETE SET NULL,
  sender_role VARCHAR(20) NOT NULL CHECK (sender_role IN ('USER', 'ASSISTANT', 'SYSTEM')),
  message TEXT NOT NULL,
  vitals_snapshot JSONB,
  model VARCHAR(100),
  response_source VARCHAR(30) DEFAULT 'WEB_APP',
  created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX IF NOT EXISTS idx_ai_chat_messages_user_created
  ON ai_chat_messages(user_id, created_at DESC);

CREATE OR REPLACE VIEW patient_doctor_summaries AS
SELECT
  u.id AS user_id,
  u.first_name,
  u.surname,
  u.email,
  u.cell_number,
  u.id_number,
  u.blood_group,
  u.known_allergies,
  u.chronic_conditions,
  u.address,
  ROUND(AVG(pr.bpm)::numeric, 1) AS average_pulse,
  ROUND(AVG(tr.temperature)::numeric, 1) AS average_temperature,
  ROUND(AVG(bpr.systolic)::numeric, 1) AS average_systolic,
  ROUND(AVG(bpr.diastolic)::numeric, 1) AS average_diastolic,
  (
    COALESCE(COUNT(DISTINCT pr.pulse_id), 0)
    + COALESCE(COUNT(DISTINCT tr.temp_id), 0)
    + COALESCE(COUNT(DISTINCT bpr.bp_id), 0)
  ) AS total_readings,
  CASE
    WHEN (
      COALESCE(COUNT(DISTINCT pr.pulse_id), 0)
      + COALESCE(COUNT(DISTINCT tr.temp_id), 0)
      + COALESCE(COUNT(DISTINCT bpr.bp_id), 0)
    ) = 0
      THEN 'No synced vitals yet. Ask the patient to sync from the mobile app before clinical review.'
    WHEN AVG(bpr.systolic) >= 140 OR AVG(bpr.diastolic) >= 90
      THEN 'Average blood pressure is high. Review repeated readings and consider follow-up.'
    WHEN AVG(pr.bpm) < 50
      THEN 'Average pulse is low. Check symptoms and review with a clinician if persistent.'
    WHEN AVG(pr.bpm) > 110
      THEN 'Average pulse is high. Recheck resting readings and review possible causes.'
    WHEN AVG(tr.temperature) >= 38
      THEN 'Average temperature is raised. Monitor fever symptoms and follow up if persistent.'
    ELSE 'Averages are not showing an obvious warning pattern. Continue monitoring trends.'
  END AS doctor_prediction
FROM users u
LEFT JOIN pulse_readings pr ON pr.user_id = u.id
LEFT JOIN temperature_readings tr ON tr.user_id = u.id
LEFT JOIN blood_pressure_readings bpr ON bpr.user_id = u.id
GROUP BY
  u.id,
  u.first_name,
  u.surname,
  u.email,
  u.cell_number,
  u.id_number,
  u.blood_group,
  u.known_allergies,
  u.chronic_conditions,
  u.address;

CREATE OR REPLACE VIEW emergency_patient_dashboard AS
SELECT
  ea.alert_id,
  ea.user_id,
  u.first_name,
  u.surname,
  u.email,
  u.cell_number,
  u.id_number,
  u.emergency_contact_name,
  u.emergency_contact_number,
  u.address,
  ea.bpm,
  ea.alert_status,
  ea.countdown_seconds,
  ea.created_at AS alert_created_at,
  h.hospital_id,
  h.name AS assigned_hospital_name,
  h.service_area AS assigned_hospital_area,
  haa.status AS hospital_assignment_status,
  haa.assigned_at
FROM emergency_alerts ea
JOIN users u ON u.id = ea.user_id
LEFT JOIN hospital_alert_assignments haa ON haa.alert_id = ea.alert_id
LEFT JOIN hospitals h ON h.hospital_id = haa.hospital_id
WHERE ea.alert_status IN ('WARNING', 'CRITICAL');

CREATE INDEX IF NOT EXISTS idx_emergency_alerts_status_created
  ON emergency_alerts(alert_status, created_at DESC);

COMMIT;
